stylesheet.less
/* ... */
// Normal text

p {
  padding-bottom: 1em;
}

p, ul, ol, li, .p-font, time.blog-post-publish-date {
  font-size: bkscale(@font-swatch5-font-size, 1);
  line-height: bkscale(@font-swatch5-line-height, 1);
  @media @tablet {
    font-size: bkscale(@font-swatch5-font-size, 0.9);
    line-height: bkscale(@font-swatch5-line-height, 0.9);
  }
  @media @mobile {
    font-size: bkscale(@font-swatch5-font-size, 0.8);
    line-height: bkscale(@font-swatch5-line-height, 0.8);
  }
}




p,
.contactform label,
.twitter ul li a,
.signupform label,
.blog-search-form label {
	font-family:@font-swatch5-font-family;
	font-weight: @font-swatch5-font-weight;
	color:@font-swatch5-color;
	line-height:@font-swatch5-line-height;
	letter-spacing: @font-swatch5-letter-spacing;
	font-size: @font-swatch5-font-size;
}

.signupform fieldset label,
.blog-search-form label {
	display: block;
	width: 100%;
	margin-bottom: 10px;
}

blockquote {
	font-style: italic;
	font-size: bkscale(@font-swatch5-font-size, 1.2);
	line-height: bkscale(@font-swatch5-line-height, 1.2);
	background-color: lighten(@color-swatch1, 10%);
	border-radius: 3px;
	&:before {
		left: 8px;
		color: @color-swatch3;
	}
}

a, .widget.twitter ul li a {
	color: @color-swatch3;
	&:hover {
		color: darken(@color-swatch3, 10%);
		text-decoration: none;
	}
}



.main-wrap, .widget.feature.bk-tpl-hidden + .main-wrap {
	background-color: @color-swatch1;
	float: initial;
	margin: 0 auto;
	max-width: 1200px;
	width: 100%;
	.template-header,
	.main,
	.template-footer {
		clear: both;
		padding: 15px 0;
		> * {
			max-width: 1200px;
		}
	}
}

.widget.feature + .main-wrap {
	background-color: @color-swatch1;
	float: left;
	margin-left: 25%;
	max-width: 100%;
	width: 75%;
}

.widget.feature {
	position: fixed;
 	height: 100%;
	width: 25%;
	.feature-bgimg {
		height: 100%;
	}
}

.template-header,
.main,
.template-footer {
	clear: both;
	padding: 0 20px;
	> * {
		max-width: 1040px;
	}
}

.main {
	padding: 15px 30px;
}

hr.line {
	background-color: darken(@color-swatch1, 10%);
}

// 2. Header
.template-header {
	color: @color-swatch1;
	float: left;
	width: 100%;
	background-color: @color-swatch7;
	.widget.logo {
		display: inline-block;
		margin-right: 10px;
		vertical-align: middle;
	}
	.widget.companyname {
		display: inline-block;
		vertical-align: middle;
	}
}

.header-main {
	padding: 20px 10px;
	@media @tablet {
		padding-left: 5px;
	}
}

.header-sub {
	background-color: @color-swatch7;
	float: left;
	width: 100%;
	display: table;
}

.template-aside, .widget.logo {
	float: left;
	.bk-content-text {
		display: inline;
	}
}

.feature-btn {
	display: block;
}

.widget.feature .feature-bgimg .content button.btn {
	background-color: lighten(@color-swatch2, 10%);
	&:hover {
		background-color: darken(@color-swatch2, 10%);
	}
}

.header-feature {
	position: relative;
	overflow: hidden;
	height: 300px;
	h2 span, h3 span {
		background: @color-swatch7;
		padding: 5px 14px;
	}
}
.widget.feature h2 {
	padding-bottom: 0;
}
.widget.feature .feature-bgimg .content h3 {
	display: inline-block;
	text-indent: @font-swatch9-letter-spacing;
	padding-top: 10px;
}

.widget.feature .feature-bgimg .content {
	display: block;
	padding: 75px 20px 0 20px;
	margin: 0 auto;
}

// Widget profile

.header-sub, .footer-content {
	.widget.profile {
		.bk-profile-address p {
			padding-bottom: 0;
		}
		.bk-profile-socialicons {
			margin: 0;
			a {
				text-indent: 9999px;
				white-space: nowrap;
				overflow: hidden;
			}
		}
		form {
			margin: 0;
		}
	}
}

.widget.profile .bk-profile-socialicons span a {
	margin-right: 5px;
	margin-bottom: 5px;
}

.header-sub .widget.profile {
	.bk-profile-address, .bk-profile-email, ul.twitter .twitter-content {
		a, p {
			color: @font-swatch6-color;
		}
	}
	.form-group {
		input {
			line-height: 26px;
		}
		button, button.btn, .btn {
			background-color: lighten(@color-swatch7, 5%);
			border: darken(@color-swatch7, 3%);
			&:hover {
				background-color: darken(@color-swatch7, 5%)
			}
		}
	}
}



// 3. Navigation
.nav {
	font-family: 'Oswald', sans-serif;
	position: relative;
	ul {
		display: block;
		width: 100%;
		padding: 0;
		margin: 0;
		list-style: none;
		border-bottom: 1px solid darken(@color-swatch1, 10%);
	}
	li {
		display: inline-block;
	}
	a {
		padding: 20px 25px;
		display: inline-block;
	}
}

.header-sub .extendednavigation {
	min-height: 49px;
	min-width: 18px;
	display: table-cell;
}

.header-sub .profile {
	display: table-cell;
	vertical-align: top;
	text-align: right;
	padding: 8px 10px 11px;
	font-family:@font-swatch6-font-family;
	font-weight: @font-swatch6-font-weight;
	color:@font-swatch6-color;
	line-height:@font-swatch6-line-height;
	letter-spacing: @font-swatch6-letter-spacing;
	font-size: @font-swatch6-font-size;
}

.widget .extendednavigation ul {
	margin: 0 auto;
	float: none;
	li {
		float: none;
		display: inline-block;
		a, > .text {
			padding: 8px 10px 11px;
			font-family:@font-swatch6-font-family;
			font-weight: @font-swatch6-font-weight;
			color:@font-swatch6-color;
			line-height:@font-swatch6-line-height;
			letter-spacing: @font-swatch6-letter-spacing;
			font-size: @font-swatch6-font-size;
			&:hover {
				color:@color-swatch4;
			}
		}
	}
	li.folder {
		margin-right: 0;
		padding-right: 10px;
		.text:hover {
			color:@color-swatch4;
		}
	}
	li.folder:after {
		right: 8px;
		top: 43%;
		border-top-color: @font-swatch6-color;
	}
	li.folder:hover {
		ul {
			min-width: 150px;
			background-color: @color-swatch7;
			left: 0;
		}
		&:after {
			border-top-color: @color-swatch4;
		}
	}
}

.widget .extendednavigation a.pull {
	width: 30px;
	height: 30px;
	top: 10px;
	left: 0;
	&:after {
		background-color: @color-swatch2;
		box-shadow: 0 6px 0 @color-swatch2, 0 12px 0 @color-swatch2;
		left: 4px;
		top: 7px;
		width: 22px;
	}
}

.widget.extendednavigation .bk-overlay {
	@media @tablet {
		width: 100%;
		left: 0!important;
	}
}
/* ... */

